# py2slack

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb  tutorial.ipynb
py2slack/: __init__.py  auth.py  notify.py  py2slack.py
